--- a/foods-website/index.html
+++ b/foods-website/index.html
@@ -30,6 +30,12 @@
                 </div>
             </section>
         <!-- end of section 1 -->
+
+        <!-- section 2 -->
+            <section class="section-2">
+                <h1 class="section-heading">Popular meals</h1>
+            </section>
+        <!-- end of section 2 -->
     </div>
     <script src="script.js"></script>
 </body>
