--- a/foods-website/index.html
+++ b/foods-website/index.html
@@ -34,6 +34,11 @@
         <!-- section 2 -->
             <section class="section-2">
                 <h1 class="section-heading">Popular meals</h1>
+                <div class="cards-container">
+                    <div class="card">
+                        <img src="" alt="">
+                    </div>
+                </div>
             </section>
         <!-- end of section 2 -->
     </div>
