--- a/foods-website/index.html
+++ b/foods-website/index.html
@@ -38,17 +38,17 @@
                     <div class="card">
                         <img src="img/card-img-1.png" class="card-img">
                         <h3 class="card-name">Fish</h3>
-                        <button class="btn">Order Now</button>
+                        <button class="card-btn">Order Now</button>
                     </div>
                     <div class="card">
                         <img src="img/card-img-2.png" class="card-img">
                         <h3 class="card-name">Cake</h3>
-                        <button class="btn">Order Now</button>
+                        <button class="card-btn">Order Now</button>
                     </div>
                     <div class="card">
                         <img src="img/card-img-3.png" class="card-img">
                         <h3 class="card-name">Lobster</h3>
-                        <button class="btn">Order Now</button>
+                        <button class="card-btn">Order Now</button>
                     </div>
                 </div>
             </section>
