--- a/foods-website/index.html
+++ b/foods-website/index.html
@@ -53,6 +53,12 @@
                 </div>
             </section>
         <!-- end of section 2 -->
+
+        <!-- section 3 -->
+            <section class="section-3">
+                
+            </section>
+        <!-- end of section 3 -->
     </div>
     <script src="script.js"></script>
 </body>
