--- a/foods-website/index.html
+++ b/foods-website/index.html
@@ -56,7 +56,50 @@
 
         <!-- section 3 -->
             <section class="section-3">
-                
+                <h1 class="section-heading">Gallery</h1>
+                <div class="gallery">
+                    <a href="#" class="gallery-link" title="Order Now">
+                        <img src="img/gallery-img-1.jpg" class="food-img">
+                        <h3 class="food-name">Pancakes</h3>
+                        <p class="food-description">Lorem ipsum dolor sit amet 
+                        consectetur adipisicing elit. Deleniti, nam.</p>
+                    </a>
+
+                    <a href="#" class="gallery-link" title="Order Now">
+                        <img src="img/gallery-img-2.jpg" class="food-img">
+                        <h3 class="food-name">Cupcakes</h3>
+                        <p class="food-description">Lorem ipsum dolor sit amet 
+                        consectetur adipisicing elit. Deleniti, nam.</p>
+                    </a>
+
+                    <a href="#" class="gallery-link" title="Order Now">
+                        <img src="img/gallery-img-3.jpg" class="food-img">
+                        <h3 class="food-name">Hummus</h3>
+                        <p class="food-description">Lorem ipsum dolor sit amet 
+                        consectetur adipisicing elit. Deleniti, nam.</p>
+                    </a>
+
+                    <a href="#" class="gallery-link" title="Order Now">
+                        <img src="img/gallery-img-4.jpg" class="food-img">
+                        <h3 class="food-name">Hamburger</h3>
+                        <p class="food-description">Lorem ipsum dolor sit amet 
+                        consectetur adipisicing elit. Deleniti, nam.</p>
+                    </a>
+
+                    <a href="#" class="gallery-link" title="Order Now">
+                        <img src="img/gallery-img-5.jpg" class="food-img">
+                        <h3 class="food-name">Salmon</h3>
+                        <p class="food-description">Lorem ipsum dolor sit amet 
+                        consectetur adipisicing elit. Deleniti, nam.</p>
+                    </a>
+
+                    <a href="#" class="gallery-link" title="Order Now">
+                        <img src="img/gallery-img-6.jpg" class="food-img">
+                        <h3 class="food-name">Vegetables</h3>
+                        <p class="food-description">Lorem ipsum dolor sit amet 
+                        consectetur adipisicing elit. Deleniti, nam.</p>
+                    </a>
+                </div>
             </section>
         <!-- end of section 3 -->
     </div>
