--- a/foods-website/index.html
+++ b/foods-website/index.html
@@ -102,6 +102,12 @@
                 </div>
             </section>
         <!-- end of section 3 -->
+
+        <!-- section 4 -->
+            <section class="section-4">
+                
+            </section>
+        <!-- end of section 4 -->
     </div>
     <script src="script.js"></script>
 </body>
