--- a/foods-website/index.html
+++ b/foods-website/index.html
@@ -105,7 +105,17 @@
 
         <!-- section 4 -->
             <section class="section-4">
-                
+                <div class="section-4-text">
+                    <h2 class="section-4-heading">Sign Me Up</h2>
+                    <p class="section-4-paragraph">Be the first to know about new products</p>
+                </div>
+                <form action="" class="signup-form">
+                    <input type="email" class="signup-form-input" placeholder="Enter your email">
+                    <button type="submit" class="signup-form-btn">
+                        <i class="fas fa-arrow-right"></i>
+                    </button>
+                </form>
+                <p class="copyright">Code and create &copy; All rights reserved</p>
             </section>
         <!-- end of section 4 -->
     </div>
