--- a/foods-website/index.html
+++ b/foods-website/index.html
@@ -115,7 +115,7 @@
                         <i class="fas fa-arrow-right"></i>
                     </button>
                 </form>
-                <p class="copyright">Code and create &copy; All rights reserved</p>
+                <p class="copyright">Coding websites &copy; All rights reserved</p>
             </section>
         <!-- end of section 4 -->
     </div>
