--- a/foods-website/index.html
+++ b/foods-website/index.html
@@ -9,6 +9,12 @@
     <title>Foods Website</title>
 </head>
 <body>
+
+    <!-- navbar -->
+    <nav class="navbar">
+        
+    </nav>
+    <!-- end of navbar -->
     
     <div class="container">
         <!-- section 1 -->
