--- a/foods-website/index.html
+++ b/foods-website/index.html
@@ -11,9 +11,29 @@
 <body>
 
     <!-- navbar -->
-    <nav class="navbar">
-        
+    <nav class="navbar target">
+        <a href="#" class="navbar-link">
+            <i class="fas fa-home"></i>
+            <span>Home</span>
+        </a>
+        <a href="#" class="navbar-link">
+            <i class="fas fa-utensils"></i>
+            <span>Meals</span>
+        </a>
+        <a href="#" class="navbar-link">
+            <i class="fas fa-hamburger"></i>
+            <span>Burger</span>
+        </a>
+        <a href="#" class="navbar-link">
+            <i class="fas fa-pizza-slice"></i>
+            <span>Pizza</span>
+        </a>
+        <a href="#" class="navbar-link">
+            <i class="fas fa-blender-phone"></i>
+            <span>Content</span>
+        </a>
     </nav>
+    <div class="menu target"></div>
     <!-- end of navbar -->
     
     <div class="container">
